# BotArmy

./: .env.example  .gitignore  CLAUDE.md  README.md  create-worktree.sh  restart-worker.sh  start-worktree.sh  start.sh
backend/: pyproject.toml
backend/src/: __init__.py  logging.py  main.py
backend/src/api/: chat.py  conversations.py  database.py  organization.py  projects.py  revenue.py  status.py  tasks.py  vault.py  workers.py
backend/src/db/: __init__.py  connection.py  conversations.py  models.py  tasks.py
backend/src/orchestrator/: __init__.py  graph.py  state.py
backend/src/orchestrator/nodes/: __init__.py  revenue.py  routing.py  tickets.py  worker.py
backend/src/tools/: __init__.py
backend/src/vault/: __init__.py  crypto.py  persistence.py  session.py
backend/src/worker/: __init__.py  __main__.py  agent_loop.py  client.py  config.py  heartbeat.py  llm_client.py  manager.py  server.py  tools.py
backend/src/workers/: __init__.py
config/: priorities.yaml  rates.yaml  targets.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ActiveTicket.tsx  AppHeader.tsx  ConnectionStatusWidget.tsx  DatabaseViewer.tsx  LoginPage.tsx  NewProjectModal.tsx  NewTaskModal.tsx  ProjectView.tsx  ProjectsWidget.tsx  RequireAuth.tsx  RevenueStatus.tsx  RevenueWidget.tsx  TaskView.tsx  TasksWidget.tsx  ThoughtLog.tsx  TicketQueue.tsx  UniverseModal.tsx  UniversesWidget.tsx  VaultUnlock.tsx  VaultView.tsx  WorkerDetailModal.tsx  WorkersWidget.tsx
frontend/src/context/: NamespaceContext.tsx  (+1 more)
(+6 files in other folders)
